--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@ section, summary, time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font: inherit; 
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
@@ -99,11 +99,11 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-color: #000;
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #000 15%, #403F3C 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #000 15%, #403F3C 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #000 15%, #403F3C 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #000 15%, #403F3C 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -120,7 +120,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
+		background-color: #7F7F79;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
@@ -3205,6 +3205,7 @@ input, select, textarea {
 		border-top-right-radius: 0.25em;
 		cursor: default;
 		text-align: center;
+		
 	}
 
 		#nav input, #nav select, #nav textarea {
